# agentmail

./: .agent_id  .env.example  .gitignore  README.md  console.html  identity.py  index.html  list_models.py  pyproject.toml  requirements.txt  server.py  skill.md  storage.py  vercel.json
.agent/: gsd-file-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-logic/: 01-01-PLAN.md
.planning/phases/02-mcp-integration/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-verification-polish/: 03-01-PLAN.md
.planning/phases/04-v0-2-0-upgrade/: 04-01-SUMMARY.md
.planning/phases/05-global-migration/: 05-01-SUMMARY.md
.showcase_hermes/: id.txt
.showcase_hermes/keys/: priv.pem  pub.pem
.showcase_openclaw/: id.txt
.showcase_openclaw/keys/: priv.pem  pub.pem
.streamlit/: secrets.toml  secrets.toml.example
landing/: index.html
showcase/: agents.py  app.py  tools.py
